# scam_detection

./: ARCHITECTURE.md  COMPLETE_CODE.md  DEPLOYMENT_STATUS.md  Dockerfile  FIXES.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_README.md  SUBMISSION_READY.md  VALIDATION_FIXES.md  app.py  deploy_to_hf.py  environment.py  example.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_advanced.py  test_env.py  test_structure.py
graders/: __init__.py  grader.py
server/: __init__.py  app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
