[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scam-detection-env"
version = "1.0.0"
description = "OpenEnv environment for AI scam and impersonation detection"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.1",
    "openai>=1.12.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "gradio>=4.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.openenv]
environment_class = "environment.ScamDetectionEnv"
server_module = "app"
config_file = "openenv.yaml"

[tool.setuptools]
packages = ["graders", "tasks"]

