[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scam-detection-env"
version = "1.0.0"
description = "OpenEnv environment for AI scam and impersonation detection"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "gradio>=4.0.0",
    "openenv-core>=0.1.0",
    "huggingface-hub>=0.19.0,<0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
environment_class = "environment.ScamDetectionEnv"
server_module = "server.app"
config_file = "openenv.yaml"

[tool.setuptools]
packages = ["graders", "tasks", "server"]

